--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "v5.7.1",
+        "spatie/laravel-activitylog": "2.8.4",
+        "spatie/laravel-permission": "2.21.0",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
